css/style.css
body{
    margin: 0;
}

.banner{
    background-color: rgb(34, 168, 235);
    max-width: 100%;
    background-image: url(../img/img/pattern.png);
    background-repeat: repeat;
    margin: 0 auto;
    height: 150px;
    background-size: 30%;
    line-height: 150px;
    
}

.logo{
    height: 70px;
    width:auto;
    vertical-align: middle;

}

/* .box-main{
    background-color: red;
    widht: 80%;

} */
.didascalia{
    color: lightgrey;
}

.anchor{
    color: aqua;

}
.didascalia-foto{
    font-size: small;
    font-weight: bold;
}

table{
    border-collapse: collapse;
}

.colonna-1{
    width: 25%;
}

.colonna-2{
    width: 25%;
}

.colonna-3{
    width: 50%;
}

th{
    background-color: lightskyblue;
}

.celeste{
    background-color: lightblue;
}

.monitor{
  width: 210px;
  height: 160px;
  background-image: url(../img/img/monitor.jpg);
  margin-bottom: 15px;
  color: white;
  background-size: cover;
}

.testo-immagine-monitor{
    margin: 10px;

}

.graph{
    width: 210px;
    height: 160px;
    background-image: url(../img/img/graph.jpg);
    color: white;
    background-size: cover;
}

.testo-immagine-graph{
    margin: 10px;

}

